--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-UserInterfaceState.xcuserstate
+TestProjectTwo.xcodeproj/project.xcworkspace/xcuserdata/Alex.xcuserdatad/UserInterfaceState.xcuserstate
+
